groupClient_egg_fixed
